--- a/styles/main.css
+++ b/styles/main.css
@@ -226,7 +226,7 @@ footer {
     background-color: rgb(250, 225, 250, .5);
 }
 
-#sortBy {
+#filtered {
     appearance: none;
     display: flex;
     padding: .5rem;
